# flnk

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-test.yml  release-deb.yml  release.yml
man/: flnk.1
src/: lib.rs  link.rs  main.rs  ui.rs
src/link/: link_files.rs  link_options.rs  mod.rs  tests.rs
